clean up about the authors template fixing whitespace

--- a/cigionline/static/css/includes/_about_the_author.scss
+++ b/cigionline/static/css/includes/_about_the_author.scss
@@ -10,9 +10,17 @@
   }
 
   .name {
-    font-size: 1.1em;
-    font-weight: 500;
+    font-size: 1.0625em;
+    font-weight: 400;
     margin-bottom: 0.25em;
+
+    a {
+      color: $black;
+
+      &:hover {
+        color: $cigi-pink;
+      }
+    }
   }
 
   .author-block {
